--- a/src/app/delivery-order-detail/delivery-order-detail.page.html
+++ b/src/app/delivery-order-detail/delivery-order-detail.page.html
@@ -4,40 +4,72 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content mode="ios">
+<ion-content mode="ios" class="ion-padding-top">
   <ng-container *ngIf="data$ as data">
     <ion-item color="tertiary" lines="full">
       <ion-grid class="ion-no-padding ion-padding-vertical">
         <ion-row>
           <ion-col class="ion-no-padding">
-            <b>รายละเอียดการจ่ายเงิน</b>
+            <ion-label>
+              <h3 class="line-height2">
+                <b>รายละเอียดการจ่ายเงิน</b>
+              </h3>
+            </ion-label>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col class="ion-no-padding">
-            <ion-label>รวมค่าสินค้า</ion-label>
-          </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">{{ data.totalPrice | number:'1.0' }}&nbsp;<small>THB</small>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col class="ion-no-padding">ค่าจัดส่ง
-          </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">{{ data.deliveryPriceTHB | number:'1.0'
-            }}&nbsp;<small>THB</small>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col class="ion-no-padding">ส่วนลด
-          </ion-col>
-          <ion-col class="ion-no-padding ion-text-right">{{ data.totalDiscount | number:'1.0' }}&nbsp;<small>THB</small>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col class="ion-no-padding">ราคารวมทั้งหมด
+            <ion-label>
+              <h3 class="line-height2"> รวมค่าสินค้า </h3>
+            </ion-label>
           </ion-col>
           <ion-col class="ion-no-padding ion-text-right">
-            <ion-text>{{ data.totalProductPrice | number:'1.0' }}&nbsp;<small>THB</small></ion-text>
+            <ion-label>
+              <h3 class="line-height2">{{ ParseToTwoDecimal(data.totalPrice ) | number:'1.2-2' }}&nbsp;<small>THB</small>
+              </h3>
+            </ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-label>
+              <h3 class="line-height2"> ค่าจัดส่ง
+              </h3>
+            </ion-label>
+          </ion-col>
+          <ion-col class="ion-no-padding ion-text-right">
+            <ion-label>
+              <h3 class="line-height2"> {{ ParseToTwoDecimal(data.deliveryPriceTHB ) | number:'1.2-2' }}&nbsp;<small>THB</small>
+              </h3>
+            </ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-label>
+              <h3 class="line-height2">ส่วนลด </h3>
+            </ion-label>
+          </ion-col>
+          <ion-col class="ion-no-padding ion-text-right">
+            <ion-label>
+              <h3 class="line-height2">{{ ParseToTwoDecimal(data.totalDiscount ) | number:'1.2-2' }}&nbsp;<small>THB</small>
+              </h3>
+            </ion-label>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-label>
+              <h3 class="line-height2">ราคารวมทั้งหมด
+              </h3>
+            </ion-label>
+          </ion-col>
+          <ion-col class="ion-no-padding ion-text-right">
+            <ion-label>
+              <h3 class="line-height2">
+                {{ ParseToTwoDecimal(data.totalProductPrice ) | number:'1.2-2' }}&nbsp;<small>THB</small>
+              </h3>
+            </ion-label>
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -47,12 +79,15 @@
       <ion-grid class="ion-no-padding ion-padding-top">
         <ion-row>
           <ion-col class="ion-no-padding">
-            <b>{{ data.restaurant?.name }}</b>
+            <ion-label>
+              <h3> <b>{{ data.restaurant?.name }}</b>
+              </h3>
+            </ion-label>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col class="ion-no-padding">
-            <ion-label color="medium">
+            <ion-label>
               <h3>
                 รายการ ({{ data.totalQuantity | number }} ชิ้น)
               </h3>
@@ -63,45 +98,48 @@
     </ion-item>
 
     <ion-list lines="full">
-      <ion-item *ngFor="let item of data.productList" color="tertiary" class="ion-no-padding">
-        <ion-grid class="ion-padding-start ion-padding-vertical">
+      <ion-item *ngFor="let item of data.productList" color="tertiary" class="ion-no-padding ion-padding-bottom">
+        <ion-grid class="ion-no-padding text-hidden ion-padding-start">
 
-          <ion-row class="ion-padding-start">
-            <ion-col class="ion-no-padding">
-              <ion-label>
-                <h3>X{{item.quantity}} {{item.name}}</h3>
-              </ion-label>
-            </ion-col>
-            <ion-col class="ion-no-padding ion-text-end" size="auto">
-              <ion-label>
-                <h3>
-                  <ion-text [color]="item.promoPrice? 'danger' : 'dark'" [ngClass]="{'line-through': item.promoPrice}">
-                    {{ ParseToTwoDecimal(item.quantity * item.price) | number:'1.2-2' }}&nbsp;<small>THB</small>
-                  </ion-text>
-                  <ion-text *ngIf="item.promoPrice">
-                    {{ ParseToTwoDecimal(item.quantity * item.promoPrice) | number:'1.2-2' }}&nbsp;<small>THB</small>
-                  </ion-text>
-                </h3>
-              </ion-label>
+          <ion-row class="ion-no-padding ion-align-items-center ion-padding-top">
+            <ion-col class="ion-padding-start">
+              <ion-row>
+                <ion-col size="6">
+                  <ion-label>
+                    <h3>X{{item.quantity}} {{item.name}}</h3>
+                  </ion-label>
+                </ion-col>
+                <ion-col size="6">
+                  <ion-label>
+                    <h3 class="ion-text-right">
+                      <ion-text *ngIf="!item.promoPrice">
+                        {{ ParseToTwoDecimal(item.quantity * item.price) | number:'1.2-2' }}&nbsp;<small>THB</small>
+                      </ion-text>
+                      <ion-text *ngIf="item.promoPrice">
+                        {{ ParseToTwoDecimal(item.quantity * item.promoPrice) | number:'1.2-2' }}&nbsp;<small>THB</small>
+                      </ion-text>
+                    </h3>
+                  </ion-label>
+                </ion-col>
+              </ion-row>
+
+              <ion-row>
+                <ion-col size="6">
+                  <ion-label color="danger">
+                    <h3>
+                      <span *ngIf="item.option">{{ item.option }}</span>
+                      <span *ngIf="!item.option">&nbsp;</span>
+                    </h3>
+                  </ion-label>
+                </ion-col>
+                <ion-col size="6">
+                  <ion-label color="medium" *ngIf="false">
+                    <h3>สถานะ:ยกเลิก</h3>
+                  </ion-label>
+                </ion-col>
+              </ion-row>
             </ion-col>
           </ion-row>
-
-          <ion-row class="ion-padding-start">
-            <ion-col class="ion-no-padding">
-              <ion-label color="danger" class="ion-text-wrap">
-                <h3>
-                  <span *ngIf="item.option">{{ item.option }}</span>
-                  <span *ngIf="!item.option">&nbsp;</span>
-                </h3>
-              </ion-label>
-            </ion-col>
-            <ion-col class="ion-no-padding" size="auto" *ngIf="false">
-              <ion-label color="medium">
-                <h3>สถานะ:ยกเลิก</h3>
-              </ion-label>
-            </ion-col>
-          </ion-row>
-
         </ion-grid>
       </ion-item>
     </ion-list>
